# leicacam

./: .all-contributorsrc  .copier-answers.yml  .coveragerc  .editorconfig  .gitignore  .pre-commit-config.yaml  .readthedocs.yml  .travis.yml  CHANGELOG.md  COMMANDS.md  CONTRIBUTING.md  LICENSE  MANIFEST.in  Makefile  README.md  README.rst  RELEASE.md  async_client.py  client.py  codecov.yml  dev-requirements.txt  pylintrc  pyproject.toml  renovate.json  requirements.txt  requirements_asyncio.txt  requirements_dev.txt  requirements_lint.txt  requirements_pypi.txt  requirements_test.txt  setup.cfg  setup.py  tox.ini
.github/: CODE_OF_CONDUCT.md  FUNDING.yml  PULL_REQUEST_TEMPLATE.md  dependabot.yml
.github/ISSUE_TEMPLATE/: 1-bug-report.yml  2-feature-request.yml  config.yml
.github/workflows/: ci.yml  draft-release.yml  labels.yml  lint-pr.yml  release.yml  test.yml  upgrader.yml
docs/: Makefile  conf.py  index.md  index.rst  installation.md  leicacam.rst  modules.rst  requirements.txt  usage.md
leicacam/: __init__.py  async_cam.py  cam.py
scripts/: gen_changelog.py
src/leicacam/: __init__.py  async_cam.py  cam.py
test/: test_async_cam.py  test_cam.py  test_leicacam.py  test_something.py
tests/: test_async_cam.py  test_cam.py
